--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-*.csv
+melb_data_ps.csv
+# указанный датасет не имеет отношения к домашнему заданию
+# он лишь демонcтрирует понимание назначения файла .gitignore
